# Play-

./: .ci.macos.import_certificate.sh  .ci.macos.notarize.sh  .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.macos.notarize.sh  .travis.sh  .travis.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Denys.md  Donation Features  FalseAccusation.hpp  FalseAccusations.hpp  GameConfig.xml  ISSUE_TEMPLATE.md  License.txt  Play.sln  Play.vcproj  Purei.sln  Purei.vcproj  README.md  Readme.html  Settings.md  UiDesign.md  appveyor.yml  appveyor_build.cmd  changelog.html  ee_functions.xml  main.html  patches.xml  play-.properties  play-.xml  testfile.txt
Source/: AboutWnd.cpp  AboutWnd.h  AnalogueListener.h  AppConfig.cpp  AppConfig.h  AppDef.h  ArmAssembler.cpp  ArmAssembler.h  ArrayStack.h  BasicBlock.cpp  BasicBlock.h  BiosDebugInfoProvider.h  BlockLookupOneWay.h  BlockLookupTwoWay.h  CMakeLists.txt  COP_FPU.cpp  COP_FPU.h  COP_FPU_Reflection.cpp  COP_SCU.cpp  COP_SCU.h  COP_SCU_Reflection.cpp  COP_VU.cpp  COP_VU.h  COP_VU_Reflection.cpp  CacheBlock.cpp  CacheBlock.h  CallStackWnd.cpp  CdromSelectionWnd.cpp  CdromSelectionWnd.h  CodeGen.cpp  CodeGen.h  CodeGenARM.cpp  CodeGenARM.h  CodeGenARM_FPU.cpp  CodeGenARM_MD.cpp  CodeGen_FPU.cpp  CodeGen_FPU.h  CodeGen_MD.cpp  CodeGen_StackPatterns.h  CodeGen_VUF128.cpp  (+299 more)
Source/ISO9660/: BlockProvider.h  DirectoryRecord.cpp  DirectoryRecord.h  File.cpp  File.h  ISO9660.cpp  ISO9660.h  PathTable.cpp  PathTable.h  PathTableRecord.cpp  PathTableRecord.h  VolumeDescriptor.cpp  VolumeDescriptor.h
Source/amd64/: CPUID.asm  CPUID.h  CacheBlock_Execute.asm  InterlockedCompareExchange.asm
Source/androidui/: GSH_OpenGLAndroid.cpp  GSH_OpenGLAndroid.h  NativeInterop.cpp  PH_Android.h
Source/app_shared/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  DefaultAppConfig.h  Log.cpp  Log.h
Source/discimages/: ChdCdImageStream.cpp  ChdCdImageStream.h  ChdImageStream.cpp  ChdImageStream.h  ChdStreamSupport.cpp  ChdStreamSupport.h  CsoImageStream.cpp  CsoImageStream.h  CueSheet.cpp  CueSheet.h  IszImageStream.cpp  IszImageStream.h  MdsDiscImage.cpp  MultiImageStream.cpp  MultiImageStream.h
Source/ee/: COP_VU.cpp  COP_VU.h  COP_VU_Reflection.cpp  DMAC.cpp  DMAC.h  Dmac_Channel.cpp  Dmac_Channel.h  EEAssembler.cpp  EEAssembler.h  EeBasicBlock.cpp  EeBasicBlock.h  EeExecutor.cpp  EeExecutor.h  Ee_IdleEvaluator.cpp  Ee_IdleEvaluator.h  Ee_LibMc2.cpp  Ee_LibMc2.h  Ee_SubSystem.cpp  Ee_SubSystem.h  FpAddTruncate.cpp  FpMulTruncate.cpp  FpMulTruncate.h  GIF.cpp  GIF.h  INTC.cpp  INTC.h  IPU.cpp  IPU.h  IPU_DmVectorTable.cpp  IPU_DmVectorTable.h  IPU_MacroblockAddressIncrementTable.cpp  IPU_MacroblockAddressIncrementTable.h  IPU_MacroblockTypeBTable.cpp  IPU_MacroblockTypeBTable.h  IPU_MacroblockTypeITable.cpp  IPU_MacroblockTypeITable.h  IPU_MacroblockTypePTable.cpp  IPU_MacroblockTypePTable.h  IPU_MotionCodeTable.cpp  IPU_MotionCodeTable.h  (+36 more)
Source/gs/: GSH_Null.cpp  GSH_Null.h  GSHandler.cpp  GSHandler.h  GsCachedArea.cpp  GsCachedArea.h  GsCachedAreaTest.cpp  GsCachedAreaTest.h  GsDebuggerInterface.h  GsPixelFormats.cpp  GsPixelFormats.h  GsSpriteRegion.h  GsTextureCache.h  GsTransferRange.h
Source/hdd/: ApaDefs.h  ApaReader.cpp  ApaReader.h  HddDefs.h  PfsDefs.h  PfsReader.cpp  PfsReader.h
Source/input/: InputBindingManager.cpp  InputBindingManager.h  InputProvider.h  PH_GenericInput.cpp  PH_GenericInput.h
Source/iop/: ArgumentIterator.cpp  ArgumentIterator.h  DirectoryDevice.cpp  DirectoryDevice.h  HardDiskDevice.cpp  HardDiskDevice.h  Ioman_Defs.h  Ioman_Device.h  Ioman_DirectoryIterator.h  Ioman_ScopedFile.cpp  Ioman_ScopedFile.h  IopBios.cpp  IopBios.h  IopExecutor.h  Iop_BiosBase.h  Iop_BiosStructs.h  Iop_Cdvdfsv.cpp  Iop_Cdvdfsv.h  Iop_Cdvdman.cpp  Iop_Cdvdman.h  Iop_DbcMan.cpp  Iop_DbcMan.h  Iop_DbcMan320.cpp  Iop_DbcMan320.h  Iop_Dev9.cpp  Iop_Dev9.h  Iop_Dmac.cpp  Iop_Dmac.h  Iop_DmacChannel.cpp  Iop_DmacChannel.h  Iop_Dmacman.cpp  Iop_Dmacman.h  Iop_Dynamic.cpp  Iop_Dynamic.h  Iop_FileIo.cpp  Iop_FileIo.h  Iop_FileIoHandler1000.cpp  Iop_FileIoHandler1000.h  Iop_FileIoHandler2100.cpp  Iop_FileIoHandler2100.h  (+106 more)
Source/macosxui/: ApplicationDelegate.h  ApplicationDelegate.mm  DebuggerWindow.h  DebuggerWindow.mm  DisAsmView.h  DisAsmView.mm  GSH_OpenGLMacOSX.cpp  GSH_OpenGLMacOSX.h  Globals.h  Info.plist  InputBox.h  InputBox.m  MainWindow.h  MainWindow.mm  ObjCCall.h  OutputWindowController.h  OutputWindowController.mm  PH_HidMacOSX.cpp  PH_HidMacOSX.h  Purei_Prefix.pch  RegView.h  RegView.mm  VfsManagerBindings.h  VfsManagerBindings.mm  VfsManagerController.h  VfsManagerController.mm  icon.icns  main.mm
Source/output/: OutputNetwork.cpp  OutputNetwork.h
Source/psx/: PsxBios.cpp  PsxBios.h
Source/s3stream/: AmazonS3Client.cpp  AmazonS3Client.h  S3ObjectStream.cpp  S3ObjectStream.h
Source/saves/: Icon.cpp  Icon.h  MaxSaveImporter.cpp  MaxSaveImporter.h  McDumpReader.cpp  McDumpReader.h  McDumpSaveImporter.cpp  McDumpSaveImporter.h  MemoryCard.cpp  MemoryCard.h  PsuSaveImporter.cpp  PsuSaveImporter.h  Save.cpp  Save.h  SaveExporter.cpp  SaveExporter.h  SaveImporter.cpp  SaveImporter.h  SaveImporterBase.cpp  SaveImporterBase.h  XpsSaveImporter.cpp  XpsSaveImporter.h
Source/shaders/: TexClamp.frag  TexClamp.vert
Source/sound/: SoundHandler.h
Source/states/: MemoryStateFile.cpp  MemoryStateFile.h  RegisterState.cpp  RegisterState.h  RegisterStateCollectionFile.cpp  RegisterStateCollectionFile.h  RegisterStateFile.cpp  (+7 more)
build_cmake/: CMakeLists.txt  build_wasm_debug.sh  build_wasm_release.sh  copy_play_js_files.sh  generate_vs2017_32.cmd  generate_vs2017_64.cmd  generate_vs2017_64_debugger.cmd  generate_vs2017_64_psfaot.cmd  generate_vs2019_64.cmd  generate_vs2019_64_debugger.cmd  generate_vs2022_64.cmd  generate_vs2022_64_debugger.cmd  generate_wasm.cmd
build_unix/: CMakeLists.txt  Play-launcher  Play.desktop  build.sh  clean.sh  controllerconfigdialog.ui  inputeventselectiondialog.ui  mainwindow.ui  memorycardmanager.ui  settingsdialog.ui  ui_unix.pro  vfsdiscselectordialog.ui  vfsmanagerdialog.ui
(+2251 files in other folders)
